--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -3,5 +3,15 @@
   "next": "التالي",
   "new_home_new_furniture": "منزل جديد!! أثاث جديد!!",
   "discover_our_distinctive_collection_of_furniture_and_renew_your_home_with_a_magical_touch": "اكتشف تشكيلتنا المميزة من الأثاث و جدد منزلك بلمسة سحرية.",
-  "login": "تسجيل الدخول"
+  "login": "تسجيل الدخول",
+  "email": "البريد الإلكتروني",
+  "password": "كلمة المرور",
+  "forgot_password": "هل نسيت كلمة المرور؟",
+  "login_with": "التسجيل بـ",
+  "google": "جوجل",
+  "facebook": "فيسبوك",
+  "create_new_acc": "إنشاء حساب جديد",
+  "password_is_required": "يجب إدخال كلمة مرور",
+  "please_enter_valid_email": "من فضلك أدخل بريد إلكتروني صحيح",
+  "email_is_required": "يجب إدخال بريد إلكتروني"
 }
