--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,5 @@
 {
-  "we_make_furniture_with_your_eyes": "We make furniture with your eyes!!",
+  "we_create_furniture_with_your_eyes": "We create furniture with your eyes!!",
   "next": "Next",
   "new_home_new_furniture": "New home!! New furniture!!",
   "discover_our_distinctive_collection_of_furniture_and_renew_your_home_with_a_magical_touch": "Discover our distinctive collection of furniture and renew your home with a magical touch.",
