--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -17,5 +17,10 @@
   "home": "الرئيسية",
   "categories": "الفئات",
   "cart": "عربة التسوق",
-  "profile": "حسابي"
+  "profile": "حسابي",
+  "login_successfully": "تم تسجيل الدخول بنجاح",
+  "login_failed": "فشل تسجيل الدخول",
+  "what_are_u_looking_for": "عن ماذا تبحث؟",
+  "here_we_make_u_fall_in_love_with_the_place_u_live_in": "هنا نجعلك تقع في حب المكان الذي تعيش فيه",
+  "contact_us": "تواصل معنا"
 }
