--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -22,5 +22,6 @@
   "login_failed": "فشل تسجيل الدخول",
   "what_are_u_looking_for": "عن ماذا تبحث؟",
   "here_we_make_u_fall_in_love_with_the_place_u_live_in": "هنا نجعلك تقع في حب المكان الذي تعيش فيه",
-  "contact_us": "تواصل معنا"
+  "contact_us": "تواصل معنا",
+  "offers": "العروض"
 }
