--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -22,5 +22,6 @@
   "login_failed": "Login Failed",
   "what_are_u_looking_for": "What are you looking for?",
   "here_we_make_u_fall_in_love_with_the_place_u_live_in": "Here we make you fall in love with the place you live in",
-  "contact_us": "Contact us"
+  "contact_us": "Contact us",
+  "offers": "Offers"
 }
