+ initialize check email screen +initialize register screen

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -22,5 +22,15 @@
   "login_failed": "فشل تسجيل الدخول",
   "what_are_u_looking_for": "عن ماذا تبحث؟",
   "here_we_make_u_fall_in_love_with_the_place_u_live_in": "هنا نجعلك تقع في حب المكان الذي تعيش فيه",
-  "contact_us": "تواصل معنا"
+  "contact_us": "تواصل معنا",
+  "already_you_have_an_account": "هل لديك حساب بالفعل؟",
+  "confirm_password": "اعادة كلمة المرور",
+  "full_name": "الاسم بالكامل",
+  "create_acc": "انشاء حساب",
+  "please_enter_valid_phone_number": "من فضلك ادخل رقم هاتف صحيح",
+  "phone_number_is_required": "يجب ادخال رقم الهاتف",
+  "phone_number": "رقم الهاتف",
+  "check_your_email": "افحص البريد الالكتروني الخاص بك",
+  "we_have_sent_you_a_four_digit_code": "لقد ارسلنا اليك كود مكون من 4 ارقام",
+  "send_the_code_again": "ارسال الكود مرة اخري؟"
 }
